--- a/project 05-06-24/css/style.css
+++ b/project 05-06-24/css/style.css
@@ -13,3 +13,68 @@
 body{
     font-family: "Open Sans", sans-serif;
 }
+.banner-sec {
+    width: 100%;
+    float: left;
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,.15);
+    background: #fff;
+}
+.banner {
+    width: 100%;
+    float: left;
+}
+.banner-img {
+    width: 100%;
+    height: 100%;
+}
+
+.banner-img img {
+    float: right;
+    width: auto;
+}
+.banner:after {
+    background: rgb(255, 68, 80);
+    content: "";
+    top: 0px;
+    left: -107px;
+    height: 398px;
+    width: 833px;
+    position: absolute;
+    transform: skewX(28deg);
+    overflow: hidden;
+}
+.banner-text {
+    position: absolute;
+    z-index: 99;
+    transform: translate(-50%, -50%);
+    left: 32%;
+    top: 50%;
+}
+.banner-text h1 {
+    font-size: 50px;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+}
+.banner-text p {
+    font-size: 24px;
+    width: 670px;
+    letter-spacing: 0px;
+    color: rgb(255, 255, 255);
+    margin-top: 20px;
+}
+.banner-second:before {
+    background: rgb(255, 68, 80);
+    content: "";
+    top: 0px;
+    left: -107px;
+    height: 398px;
+    width: 833px;
+    position: absolute;
+    transform: skewX(28deg);
+    overflow: hidden;
+}
+.banner-second {
+    position: relative;
+    width: 100%;
+    float: left;
+}   
