--- a/project 05-06-24/css/style.css
+++ b/project 05-06-24/css/style.css
@@ -93,3 +93,237 @@
     transform: translateX(0);
     left: 0;
 }
+
+/* NEWSLETTER SECTION START */
+
+.newsletter-main{
+    width: 100%;
+    float: left;
+    background-color: #ff4450;
+    
+}
+.newsletter{
+    width: 100%;
+    float: left;
+    height: 170px;
+    display: flex;
+    align-items: center;
+}
+.nl-left{
+    width: 60%;
+    float: left;
+}
+.nl-right{
+    width: 40%;
+    float: left;
+}
+.nl-left h2{
+    font-size: 19px;
+    color: #ffffff;
+    line-height: 22px;
+    text-align: left;
+}
+.nl-left p{
+    font-size: 15px;
+    color: #ffffff;
+    line-height: 22px;
+    text-align: left;
+    margin-top: 10px;
+}
+.nl-right h3 {
+    font-size: 14px;
+    font-weight: 400;
+    color: #ffffff;
+    margin-bottom: 15px;
+}
+.input-group{
+    float: left;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+.nl-right .input-group input{
+    height: 45px;
+    padding-right: 80px;
+    padding-left: 30px;
+    border-radius: 0;
+    border: 0;
+    background: #fff;
+    box-shadow: none !important;
+    outline: none;
+    color: #555;
+    width: 100%;
+}
+.nl-right .input-group a{
+    height: 45px;
+    padding: 0;
+    line-height: 45px;
+    min-width: 135px;
+    background-color: #457974;
+    text-align: center;
+    outline: 0 !important;
+    font-size: 14px;
+    font-weight: 400;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+
+}
+/* NEWSLETTER SECTION END */
+
+/* .popular course SECTION START */
+.popular-courses-main{
+    width: 100%;
+    float: left;
+    padding: 80px 0;
+    background-color: #f0f4fa;
+}
+.popular-course{
+    width: 100%;
+    float: left;
+    padding-top: 70px;
+}
+.heading{
+    width: 100%;
+    float: left;
+    text-align: center;
+}
+.heading h2{
+    color: #ff4450;
+    font-size: 50px;
+    line-height: 50px;
+    text-align: center;
+}
+.heading p{
+    font-size: 18px;
+    line-height: 28px;
+    text-align: center;
+    font-weight: 300;
+    color: #273044;
+    margin-top: 15px;
+}
+.course-boxes{
+    width: 25%;
+    float: left;
+    padding: 10px;
+}
+.course-box{
+    width: 100%;
+    float: left;
+    background-color:white;
+}
+.course-text{
+    width: 100%;
+    float: left;
+    padding: 20px;
+    padding-bottom: 0;
+}
+.course-img{
+    width: 100%;
+    height: 180px;
+    float: left;
+    overflow: hidden;
+}
+
+.course-img img{
+    width: 100%;
+    transition: .3s;
+}
+.course-box:hover .course-img img{
+    transform: scale(1.1);
+}
+.course-text span{
+    margin: 0 0 10px;
+    color: #aaa;
+    font-size: 13px;
+}
+.course-text h5 {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 20px;
+    transition: .3s;
+    padding: 10px 0;
+    padding-bottom: 15px;
+    height: 65px;
+}
+
+.course-text h5:hover {
+   color:#337ab7 ;
+}
+.line {
+    width: 100%;
+    height: 1px;
+    background: #ddd;
+}
+.course-bottom-text {
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+    width: 100%;
+    justify-content: space-between;
+    height: 65px;
+}
+.price {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+}
+.price span{
+    margin: 0;
+    text-decoration: line-through;
+}
+.course-bottom-text p{
+    font-size: 13px;
+    color: #505050;
+}
+.slick-prev, .slick-next {
+    font-size: 0;
+    line-height: 0;
+    position: absolute;
+    top: 110%;
+    display: block;
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    cursor: pointer;
+    color: transparent;
+    border: none;
+    outline: none;
+    background: red;
+}
+.slick-prev {
+    left: 45%;
+}
+.slick-next {
+    right: 45%;
+}
+button.slick-prev.slick-arrow {
+    display: inline-block;
+    vertical-align: top;
+    width: 46px;
+    height: 46px;
+    line-height: 44px;
+    text-align: center;
+    font-size: 14px;
+    border: 1px solid #e0e0e0;
+    cursor: pointer;
+    transition: .3s ease;
+    background-color: #fff;
+}
+button.slick-next.slick-arrow {
+    display: inline-block;
+    vertical-align: top;
+    width: 46px;
+    height: 46px;
+    line-height: 44px;
+    text-align: center;
+    font-size: 14px;
+    border: 1px solid #e0e0e0;
+    cursor: pointer;
+    transition: .3s ease;
+    background-color: #fff;
+}
+/* .popular course SECTION END */
