--- a/project 05-06-24/css/style.css
+++ b/project 05-06-24/css/style.css
@@ -13,237 +13,68 @@
 body{
     font-family: "Open Sans", sans-serif;
 }
-
-/* NEWSLETTER SECTION START */
-
-.newsletter-main{
+.banner-sec {
     width: 100%;
     float: left;
-    background-color: #ff4450;
-    
-}
-.newsletter{
-    width: 100%;
-    float: left;
-    height: 170px;
-    display: flex;
-    align-items: center;
-}
-.nl-left{
-    width: 60%;
-    float: left;
-}
-.nl-right{
-    width: 40%;
-    float: left;
-}
-.nl-left h2{
-    font-size: 19px;
-    color: #ffffff;
-    line-height: 22px;
-    text-align: left;
-}
-.nl-left p{
-    font-size: 15px;
-    color: #ffffff;
-    line-height: 22px;
-    text-align: left;
-    margin-top: 10px;
-}
-.nl-right h3 {
-    font-size: 14px;
-    font-weight: 400;
-    color: #ffffff;
-    margin-bottom: 15px;
-}
-.input-group{
-    float: left;
-    display: flex;
-    align-items: center;
-    width: 100%;
-}
-.nl-right .input-group input{
-    height: 45px;
-    padding-right: 80px;
-    padding-left: 30px;
-    border-radius: 0;
-    border: 0;
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,.15);
     background: #fff;
-    box-shadow: none !important;
-    outline: none;
-    color: #555;
-    width: 100%;
 }
-.nl-right .input-group a{
-    height: 45px;
-    padding: 0;
-    line-height: 45px;
-    min-width: 135px;
-    background-color: #457974;
-    text-align: center;
-    outline: 0 !important;
-    font-size: 14px;
-    font-weight: 400;
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
+.banner {
+    width: 100%;
+    float: left;
+}
+.banner-img {
+    width: 100%;
+    height: 100%;
+}
 
+.banner-img img {
+    float: right;
+    width: auto;
 }
-/* NEWSLETTER SECTION END */
-
-/* .popular course SECTION START */
-.popular-courses-main{
-    width: 100%;
-    float: left;
-    padding: 80px 0;
-    background-color: #f0f4fa;
-}
-.popular-course{
-    width: 100%;
-    float: left;
-    padding-top: 70px;
-}
-.heading{
-    width: 100%;
-    float: left;
-    text-align: center;
-}
-.heading h2{
-    color: #ff4450;
-    font-size: 50px;
-    line-height: 50px;
-    text-align: center;
-}
-.heading p{
-    font-size: 18px;
-    line-height: 28px;
-    text-align: center;
-    font-weight: 300;
-    color: #273044;
-    margin-top: 15px;
-}
-.course-boxes{
-    width: 25%;
-    float: left;
-    padding: 10px;
-}
-.course-box{
-    width: 100%;
-    float: left;
-    background-color:white;
-}
-.course-text{
-    width: 100%;
-    float: left;
-    padding: 20px;
-    padding-bottom: 0;
-}
-.course-img{
-    width: 100%;
-    height: 180px;
-    float: left;
+.banner:after {
+    background: rgb(255, 68, 80);
+    content: "";
+    top: 0px;
+    left: -107px;
+    height: 398px;
+    width: 833px;
+    position: absolute;
+    transform: skewX(28deg);
     overflow: hidden;
 }
-
-.course-img img{
-    width: 100%;
-    transition: .3s;
-}
-.course-box:hover .course-img img{
-    transform: scale(1.1);
-}
-.course-text span{
-    margin: 0 0 10px;
-    color: #aaa;
-    font-size: 13px;
-}
-.course-text h5 {
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 20px;
-    transition: .3s;
-    padding: 10px 0;
-    padding-bottom: 15px;
-    height: 65px;
-}
-
-.course-text h5:hover {
-   color:#337ab7 ;
-}
-.line {
-    width: 100%;
-    height: 1px;
-    background: #ddd;
-}
-.course-bottom-text {
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
-    width: 100%;
-    justify-content: space-between;
-    height: 65px;
-}
-.price {
-    display: flex;
-    flex-direction: column;
-    text-align: right;
-}
-.price span{
-    margin: 0;
-    text-decoration: line-through;
-}
-.course-bottom-text p{
-    font-size: 13px;
-    color: #505050;
-}
-.slick-prev, .slick-next {
-    font-size: 0;
-    line-height: 0;
+.banner-text {
     position: absolute;
-    top: 110%;
-    display: block;
-    width: 20px;
-    height: 20px;
-    padding: 0;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-    cursor: pointer;
-    color: transparent;
-    border: none;
-    outline: none;
-    background: red;
+    z-index: 99;
+    transform: translate(-50%, -50%);
+    left: 32%;
+    top: 50%;
 }
-.slick-prev {
-    left: 45%;
+.banner-text h1 {
+    font-size: 50px;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
 }
-.slick-next {
-    right: 45%;
+.banner-text p {
+    font-size: 24px;
+    width: 670px;
+    letter-spacing: 0px;
+    color: rgb(255, 255, 255);
+    margin-top: 20px;
 }
-button.slick-prev.slick-arrow {
-    display: inline-block;
-    vertical-align: top;
-    width: 46px;
-    height: 46px;
-    line-height: 44px;
-    text-align: center;
-    font-size: 14px;
-    border: 1px solid #e0e0e0;
-    cursor: pointer;
-    transition: .3s ease;
-    background-color: #fff;
+.banner-second:before {
+    background: rgb(255, 68, 80);
+    content: "";
+    top: 0px;
+    left: -107px;
+    height: 398px;
+    width: 833px;
+    position: absolute;
+    transform: skewX(28deg);
+    overflow: hidden;
 }
-button.slick-next.slick-arrow {
-    display: inline-block;
-    vertical-align: top;
-    width: 46px;
-    height: 46px;
-    line-height: 44px;
-    text-align: center;
-    font-size: 14px;
-    border: 1px solid #e0e0e0;
-    cursor: pointer;
-    transition: .3s ease;
-    background-color: #fff;
-}
-/* .popular course SECTION END */
+.banner-second {
+    position: relative;
+    width: 100%;
+    float: left;
+}   
