--- a/project 05-06-24/css/style.css
+++ b/project 05-06-24/css/style.css
@@ -13,3 +13,89 @@
 body{
     font-family: "Open Sans", sans-serif;
 }
+.flex{
+    display: flex;
+}
+.col-4{
+    width: 25%;
+    
+}
+img{
+    width: 100%;
+}
+.footer {
+    background-color: #273044;
+    padding: 63px 0 25px 0;    
+    color: #fff;
+    font-size: 13px;
+}
+.footer h3{
+    font-size: 18px;
+    margin-bottom: 21px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.manage{
+    padding: 0 15px 15px 15px;
+}
+.paragraph a{
+    color: #457992;
+}
+.contact-text{
+    font-size: 13px;
+    margin-bottom: 12px
+}
+.f-bg{
+    background-color: #3b5998;
+}
+.insta-bg{
+    background-color: #c32aa3;
+}
+.link-bg{
+    background-color: #0077b5;
+}
+.pay{
+    background-color: #bd081c;
+}
+.twit{
+    background-color: #1da1f2;
+}
+.drib{
+    background-color: #ea4c89;
+}
+.plus{
+    background-color: #db4437;
+}
+
+.social-media {
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    margin: 0 8px 10px 0;
+    color: #fff;
+    transition: 1s ease all;
+}
+.social-media:hover{
+    background-color: #ff6900;
+    transform:rotateY(360deg)
+}
+.footer-copyright{
+    padding: 23px 20px;
+    background-color: #273044;
+    border-top: 1px solid #5e676b;
+    color: #fff;
+    font-size: 14px;
+}
+.footer-image img {
+    max-width: 27px;
+    margin-right: 24px;
+    margin-left: 14px;
+}
+.footer-copyright a{
+    color: #fff;
+}
+
