--- a/project 05-06-24/css/style.css
+++ b/project 05-06-24/css/style.css
@@ -13,7 +13,7 @@
 body{
     font-family: "Open Sans", sans-serif;
 }
-.banner{
+.banners{
     background-image: url('../images/bg.png');
     background-position: center center;
     background-repeat: no-repeat;
