--- a/project 05-06-24/css/style.css
+++ b/project 05-06-24/css/style.css
@@ -295,9 +295,9 @@ padding: 0px 8px;
     transition: all .25s cubic-bezier(.66,.36,.17,.91);
 }
 
-.instucture-main a:hover:after {
+.instucture-main > a:hover:after {
     transform: translateX(0);
-    left: 0;
+    left:0;
 }
 .banner-sec {
     width: 100%;
