--- a/project 05-06-24/css/style.css
+++ b/project 05-06-24/css/style.css
@@ -130,3 +130,8 @@ body{
     border-radius: 25px;
     border: rgb(69 121 147);
 }
+.courses-box-main button:hover{
+    background-color: rgb(28, 78, 102);
+    transition: linear 0.6s;
+}
+
