--- a/project 05-06-24/css/style.css
+++ b/project 05-06-24/css/style.css
@@ -18,14 +18,15 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    min-height: 85vh;
+    min-height: 100vh;
     width: 100%;
     float: left;
+    margin-bottom: 50px;
 }
 .baner-txt h2 {
     font-size: 50px;
     line-height: 54px;
-    padding-top: 100px;
+    padding-top: 85px;
     padding-bottom: 15px;
 }
 .baner-txt p {
@@ -34,7 +35,7 @@ body{
     line-height: 28px;
 }
 .baner-txt a button {
-    padding: 18px 37px;
+    padding: 20px 60px;
     border-radius: 30px;
     border: none;
     background: #ff4450;
@@ -43,11 +44,22 @@ body{
     font-weight: 600;
     margin-top: 28px;
     text-transform: uppercase;
+    position: relative;
+    overflow: hidden;
+    transition: .25s ease;
+}
+.baner-txt a button:after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    height: 100%;
+    width: 100%;
+    background-color: #0077b5;
+    transition: .25s ease;
 }
 .baner-txt a button:hover{
-    content: "";
-    background-color: orangered;
-    transition:all .25s
+    background-color: rgb(77, 22, 2);
 }
 .flex {
     display: flex;
